# agent-file-create

./: .dockerignore  .gitignore  Dockerfile  README.md  agent_core.py  agent_web.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agent_file_create/: __init__.py  __main__.py  cli.py  config.py  db_service.py  document_service.py  errors.py  llm_client.py  llm_factory.py  logging_config.py  preprocessor.py  prompts.py  utils.py  web.py  web_server.py
docs/: Q1_提取优化_最终总结.md  Q1_提取优化方案_v2.md  Q2_大纲质量优化_最终总结.md  Q3_知识预检索优化_最终总结.md  Q3_知识预检索优化方案.md  README.md  agent-memory.md  architecture_design.docx  architecture_design.md  generate_architecture_doc.py  langchain-integration.md  long-text-generation.md  rag-knowledge-base.md  reasoning-rag.md
html/: app.js  index.html  styles.css
scripts/: download_datasets.py  download_dureader_retrieval.py  download_q1_datasets.py  eval_content_q4.py  eval_extract_q1_benchmarks.py  eval_extract_q1_local.py  eval_extract_q1_v2.py  eval_outline_q2.py  eval_planner_critic_alce_local.py  eval_rag_impact.py  eval_rag_pipeline.py  eval_retrieval.py  eval_retrieval_q3.py  generate_application.py  quick_gen.py  test_citations.py  test_q1_synthetic.py  test_q1_synthetic_large.py  test_rag.py
template/: report_template.docx  report_template.md
tests/: eval_result.json  paper_queries.json  retrieval_queries_sample.json  run_all.py  test_agent.py  test_chat_intent.py  test_chat_kb_parse.py  test_comparison.py  test_comparison.py.bak  test_extraction_q1.py  test_llm_comparison.py  test_utils.py  (+5 more)
(+82 files in other folders)
